Fixed issue with images not centering on small screen, adjusted column sizes and margins.

--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -46,6 +46,7 @@ form label {
 .image-container {
     position: relative;
     max-width: 300px;
+    overflow: hidden;
 }
 .text-block {
     position: absolute;
@@ -53,8 +54,12 @@ form label {
     min-width: 100%;
     height: 25%;
     background-color: #4aaaa5;
-    line-height: 75px;
     text-align: center;
+}
+.vertical-align {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 /* Custom Submit Button */
 .my-button {
